WordFeatureTreatment/trainLog/SyntaxError_4.txt
  File "b.py", line 3
    
                         ^
SyntaxError: invalid syntax
